istio/networking/locality/failover.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin-local
spec:
  hosts:
    - "httpbin.sidecar.svc.cluster.local"
  endpoints:
    - address: 192.168.4.124
      locality: us/us-east-2
  ports:
    - name: http
      number: 8000
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: httpbin-local
spec:
  host: "httpbin.sidecar.svc.cluster.local"
  trafficPolicy:
    outlierDetection:
      maxEjectionPercent: 100
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 10s
    loadBalancer:
      localityLbSetting:
        enabled: true
